--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ TAGS
 /src/tools/gen_lov_objid
 /src/tools/read_lovea
 /src/tools/set_lovea
+/src/tools/ost_fids_remap
 /src/robinhood/rbh-du
 /src/robinhood/rbh-find
 /src/robinhood/rbh-report
@@ -91,3 +92,8 @@ TAGS
 /src/robinhood/rbh-lhsm-diff
 /tests/lustre_fs/*.log
 /tests/posix_fs/*.log
+/TODO
+/src/include/hsmlite_types.h
+/src/include/lustre_hsm_types.h
+/src/include/tmp_fs_mgr_types.h
+
