--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -10,7 +10,8 @@ EXTRA_DIST= robinhood.init			\
 	demo/disk_usage.sh			\
 	demo/migr_purge.sh			\
 	demo/rh.migr_purge.conf			\
-	demo/write_data.sh
+	demo/write_data.sh  \
+    cmd2man.sh make_mans.sh.in make_mans.sh fix_man_options.sh
 
 dist_sbin_SCRIPTS=rbh-config
 if HSM_LITE
