packaging: add all mans in dist tarball (created by make dist).

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,7 +79,8 @@ EXTRA_DIST= robinhood.spec robinhood.spec.in   		\
 	LICENSE.fr.txt LICENSE.en.txt README.tmp_fs_mgr README.Lustre_HSM	\
 	doc/admin_guides \
     doc/install_webgui.txt \
-	ChangeLog
+	ChangeLog \
+    man/*.1
 
 
 
