non-reg: added test 116 (test behavior when fs_path != mount point)

--- a/tests/lustre_fs/cfg/test_mnt_point.conf
+++ b/tests/lustre_fs/cfg/test_mnt_point.conf
@@ -4,7 +4,27 @@
 General
 {
 	fs_path = $fs_path;
-	fs_type = ext3;
+	fs_type = lustre;
+}
+
+# ChangeLog Reader configuration
+# Parameters for processing MDT changelogs :
+ChangeLog
+{
+    # 1 MDT block for each MDT :
+    MDT
+    {
+        # name of the first MDT
+        mdt_name  = "MDT0000" ;
+
+        # id of the persistent changelog reader
+        # as returned by "lctl changelog_register" command
+        reader_id = "cl1" ;
+    }
+    force_polling = TRUE;
+    polling_interval = 1s;
+    mds_has_lu543 = FALSE;
+    mds_has_lu1331 = FALSE;
 }
 
 Log
@@ -29,8 +49,8 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_test";
-		user = "robinhood";
+		db = "robinhood_lustre";
+        user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
         innodb = enabled;
@@ -43,7 +63,19 @@ ListManager
 }
 
 # for tests with backup purpose
-Backend
+backend
 {
-	opt_string = "root=/tmp/backend";
+    root = "/tmp/backend";
+    mnt_type=ext4;
+    check_mounted = FALSE;
+}
+
+FS_Scan
+{
+    Ignore { path == "/mnt/lustre/.lustre" }
+}
+
+Migration_Policies
+{
+    policy default { condition { last_access > 1s } }
 }
