tests: added ost check order test (304) + fixed OST trigger tests

--- a/tests/lustre_fs/cfg/test_trig2.conf
+++ b/tests/lustre_fs/cfg/test_trig2.conf
@@ -38,8 +38,8 @@ purge_trigger
     # purge if volume on OST1 > 150MB
     # until volume is 110MB
     trigger_on         = OST_usage;
-    high_threshold_vol = 150MB;
-    low_threshold_vol  = 110MB;
+    high_threshold_vol = $ost_high_vol;
+    low_threshold_vol  = $ost_low_vol;
     check_interval     = 5min ;
 }
 
