--- a/tests/lustre_fs/cfg/test_trig.conf
+++ b/tests/lustre_fs/cfg/test_trig.conf
@@ -38,8 +38,8 @@ purge_trigger
     # purge if file count > 100
     # until file count is 80
     trigger_on         = global_usage;
-    high_threshold_cnt = 150;
-    low_threshold_cnt  = 130;
+    high_threshold_cnt = $high_cnt;
+    low_threshold_cnt  = $low_cnt;
     check_interval     = 5min ;
 }
 
