--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -34,6 +34,7 @@ BuildRequires: %{lpackage} >= %{lversion}    \
 %if %{with mysql}                            \
 BuildRequires: /usr/include/mysql/mysql.h    \
 %endif \
+BuildRequires: mailx \
 %{nil}
 
 # target install dir for web gui
