Start adapting tests to v3.0
Change-Id: Ie9238d241c8ae1d935eb6b9f137a84cf8a62dffd

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -74,3 +74,32 @@ FS_Scan
 {
     Ignore { path == "/mnt/lustre/.lustre" }
 }
+
+define_policy {
+    name  = "migration";
+    scope { type == file and (status == new or status == dirty) }
+}
+
+migration_parameters
+{
+    lru_sort_attr = last_mod;
+    default_action = lhsm.archive;
+    nb_threads = 2;
+
+    max_action_count = 100;
+}
+
+migration_trigger
+{
+    trigger_on = scheduled;
+    check_interval = 1s;
+}
+
+define_policy { name  = "purge"; }
+
+purge_parameters
+{
+    lru_sort_attr = last_access;
+    default_action = lhsm.release;
+    nb_threads = 2;
+}
