--- a/tests/lustre_fs/cfg/test_check_migr.conf
+++ b/tests/lustre_fs/cfg/test_check_migr.conf
@@ -7,7 +7,7 @@
 
 %include "common.conf"
 
-db_update_policy
+db_update_params
 {
     path_update = on_event_periodic(5s,30s);
     md_update   = on_event_periodic(5s,30s);
