--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -80,7 +80,7 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-db_update_policy
+db_update_params
 {
     path_update = on_event_periodic(5s,30s);
     md_update   = on_event_periodic(5s,30s);
