--- a/tests/lustre_fs/cfg/test_fileclass.conf
+++ b/tests/lustre_fs/cfg/test_fileclass.conf
@@ -24,36 +24,31 @@ Filesets
         FileClass in_dir_A
         {
             definition { tree == "/mnt/lustre/dir_A" }
-            Migration_hints="fileclass={fileclass}";
-            archive_id = 1;
+            Migration_hints="fileclass={fileclass},archive_id=1";
         }
 
         FileClass in_dir_B
         {
             definition { tree == "/mnt/lustre/dir_B" }
-            Migration_hints="fileclass={fileclass}";
-            archive_id = 1;
+            Migration_hints="fileclass={fileclass},archive_id=1";
         }
 
         FileClass odd_or_A
         {
             definition { odd_files UNION in_dir_A }
-            Migration_hints="fileclass={fileclass}";
-            archive_id = 1;
+            Migration_hints="fileclass={fileclass},archive_id=1";
         }
 
         FileClass even_and_B
         {
             definition { even_files INTER in_dir_B }
-            Migration_hints="fileclass={fileclass}";
-            archive_id = 1;
+            Migration_hints="fileclass={fileclass},archive_id=1";
         }
 
         FileClass even_and_not_B
         {
             definition { even_files INTER NOT in_dir_B }
-            Migration_hints="fileclass={fileclass}";
-            archive_id = 1;
+            Migration_hints="fileclass={fileclass},archive_id=1";
         }
 }
 
@@ -88,8 +83,7 @@ migration_policies
     policy default
     {
         condition { last_mod > 1s }
-        archive_id = 1;
-        Migration_hints="unmatched";
+        Migration_hints="unmatched,archive_id=1";
     }
 
 }
