--- a/src/policies/Makefile.am
+++ b/src/policies/Makefile.am
@@ -2,4 +2,6 @@ AM_CFLAGS= $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 
 noinst_LTLIBRARIES=libpolicies.la
 
-libpolicies_la_SOURCES=policy_matching.c policy_loader.c  policy_run.c  run_policies.h policy_triggers.c policy_actions.c policy_run_cfg.c
+libpolicies_la_SOURCES=policy_matching.c policy_loader.c policy_triggers.c \
+                       policy_run_cfg.c status_manager.c run_policies.h policy_run.c \
+                       policy_actions.c 
