Generic policies: Rename/remove old policy files. Reorganize policy code tree.
Change-Id: Iae7557aa5b7cefb164ca5c34b5770c93bfa60d64

--- a/configure.ac
+++ b/configure.ac
@@ -438,12 +438,7 @@ AC_CONFIG_FILES([Makefile
          src/entry_processor/Makefile
          src/fs_scan/Makefile
          src/chglog_reader/Makefile
-         src/policy_matching/Makefile
-         src/policy_modules/Makefile
-         src/policy_modules/purge/Makefile
-         src/policy_modules/migration/Makefile
-         src/policy_modules/hsm_remove/Makefile
-         src/policy_modules/rmdir/Makefile
+         src/policies/Makefile
          src/backend_ext/Makefile
          src/robinhood/Makefile
          src/tools/Makefile
