--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -10,11 +10,11 @@ noinst_HEADERS=db_types.h  list_mgr.h RW_Lock.h \
 		uidgidcache.h Memory.h rbh_const.h RobinhoodLogs.h \
 		RobinhoodConfig.h RobinhoodMisc.h config_parsing.h \
 		global_config.h entry_processor.h      \
-		fs_scan_main.h chglog_reader.h resource_monitor.h \
+		fs_scan_main.h chglog_reader.h policy_run.h\
 		xplatform_print.h lustre_extended_types.h \
-		policies.h rmdir.h queue.h StringAlloc.h hsm_rm.h migration.h \
+		policy_rules.h rmdir.h queue.h StringAlloc.h hsm_rm.h \
 		entry_proc_hash.h list.h var_str.h \
-        lustre/lustre_errno.h
+        lustre/lustre_errno.h update_params.h
 
 if LUSTRE_HSM
 noinst_HEADERS+=lustre_hsm_types.h lustre_hsm_types.def pipeline_types.h
