New fileclass management.
Entries are matched against all fileclasses, independently from policy definitions.
An entry can match multiple fileclasses: the DB stores the list of matched classes in a text field (fileclass).
A fileclass can be tagged as non-matchable by specifying 'match = no' in the config.
In this case, it can still be used in policy definitions, but it won't appear in classinfo report.

Change-Id: I2f5d4b34d77e799b3d591b833d00f6f805ba24f3

--- a/tests/lustre_fs/cfg/test_fileclass.conf
+++ b/tests/lustre_fs/cfg/test_fileclass.conf
@@ -13,24 +13,28 @@ Filesets
         {
             Definition { name == "*[02468]" }
             Migration_hints="fileclass={fileclass}";
+            match =false;
         }
 
         FileClass odd_files
         {
             Definition { name == "*[13579]" }
             Migration_hints="fileclass={fileclass}";
+            match =false;
         }
 
         FileClass in_dir_A
         {
             definition { tree == "/mnt/lustre/dir_A" }
             Migration_hints="fileclass={fileclass},archive_id=1";
+            match =false;
         }
 
         FileClass in_dir_B
         {
             definition { tree == "/mnt/lustre/dir_B" }
             Migration_hints="fileclass={fileclass},archive_id=1";
+            match =false;
         }
 
         FileClass odd_or_A
