--- a/configure.ac
+++ b/configure.ac
@@ -109,6 +109,11 @@ if test "x$support_lustre" = "xyes" ; then
             AC_DEFINE(_MDT_SPECIFIC_LOVEA, 1, [MDT LOV EA is no longer the same as lov_user_md])
         fi
 
+        AC_CHECK_HEADER([lustre/lustre_idl.h], have_lustre_idl="true", have_lustre_idl="false")
+        if test "$have_lustre_idl" = "true"; then
+            AC_DEFINE(_LUSTRE_IDL_HEADER, 1, [lustre_idl header exists])
+        fi
+
         # this defines LVERSION and LPACKAGE variables
         if test -z "$LDIR" ; then
             AX_LUSTRE_VERSION
