Code style: renamed CamelCase files to lower case.
renamed Robinhood* files to rbh_*.

Change-Id: I412b69aea3de0b20e02b65f4a565aee10375a1f3

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
-SUBDIRS=src scripts tests web_gui man
+SUBDIRS=src scripts tests web_gui
 
 rpm_dir=`pwd`/rpms
 
