--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -4,8 +4,7 @@ AM_LDFLAGS= -lpthread
 DATE=`date '+%F %T'`
 MISC_FLAGS="-DCOMPIL_DATE=\"$(DATE)\""
 
-all_libs= ../logs/liblogs.la \
-            ../cfg_parsing/libconfigparsing.la \
+all_libs= ../cfg_parsing/libconfigparsing.la \
                 ../fs_scan/libfsscan.la \
                 ../entry_processor/libentryproc.la \
                 ../policy_matching/libpolicies.la
