code: turned all 'int' used as booleans to standard 'bool' type of C99. build options: "pedantic" check of ISO C99.
Change-Id: I15196da1a4106545a5dbb1310fccf07e2fed3efa

--- a/configure.ac
+++ b/configure.ac
@@ -43,7 +43,7 @@ AC_SYS_LARGEFILE
 
 # gcc options
 #CC_OPT="-Wall -Werror"
-CC_OPT="-Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations"
+CC_OPT="-Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -std=gnu99 -pedantic  -Wno-variadic-macros"
 AC_SUBST(CC_OPT)
 
 AC_CHECK_SIZEOF([nlink_t])
