tests: added extra checks in test 101 (rm -rf case). Policy definitions for Lustre/HSM.
Change-Id: I695f76b0aea8e3e93d2ac90a80b36ff7cad7a91e

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -77,7 +77,8 @@ FS_Scan
 
 define_policy {
     name  = "migration";
-    scope { type == file and (status == new or status == dirty) }
+    scope { type == file and (status == new or status == modified) }
+    status_manager = lhsm;
 }
 
 migration_parameters
@@ -95,7 +96,11 @@ migration_trigger
     check_interval = 1s;
 }
 
-define_policy { name  = "purge"; }
+define_policy {
+    name  = "purge";
+    scope { type == file and status == synchro }
+    status_manager = lhsm;
+}
 
 purge_parameters
 {
