--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -106,6 +106,18 @@ filesets
 
 }
 
+define_policy {
+    name  = "migration";
+    scope { type == file and (status == new or status == modified) }
+    status_manager = lhsm;
+}
+define_policy {
+    name  = "purge";
+    scope { type == file and status == synchro }
+    status_manager = lhsm;
+}
+
+
 migration_policies
 {
    ignore { name == "whitelist*" }
