tests: adapting Lustre/HSM tests to rbhv3.
Change-Id: I0fd3572dbc01b2a95195b858ebcc6e21fca3c22c

--- a/tests/lustre_fs/cfg/test1.conf
+++ b/tests/lustre_fs/cfg/test1.conf
@@ -16,9 +16,9 @@ migration_policies
         # if they are continuously appended.
         condition
         {
-            last_mod > 30sec
+            last_mod > 10sec
         }
-        archive_id = 1;
+        hints="archive_id=1";
     }
 }
 
