--- a/tests/lustre_fs/cfg/test3.conf
+++ b/tests/lustre_fs/cfg/test3.conf
@@ -15,8 +15,7 @@ Filesets
                 {
                         name == "*[02468]"
                 }
-                Migration_hints="fileclass={policy}";
-                archive_id = 1;
+                migration_hints="fileclass={policy},archive_id=1";
         }
 
         FileClass odd_files
@@ -25,8 +24,7 @@ Filesets
                 {
                         name == "*[13579]"
                 }
-                Migration_hints="fileclass={policy}";
-                archive_id = 1;
+                migration_hints="fileclass={policy},archive_id=1";
         }
 
 }
@@ -36,31 +34,31 @@ Filesets
 
 migration_policies
 {
-    # migrate even files 15s after they have been modified
+    # migrate even files 10s after they have been modified
     policy even_migr
     {
         target_fileclass = even_files;
         condition {
-                last_mod > 15s
+                last_mod > 10s
         }
     }
 
-    # migrate odd files 30s after they have been modified
+    # migrate odd files 20s after they have been modified
     policy odd_migr
     {
         target_fileclass = odd_files;
         condition {
-                last_mod > 30s
+                last_mod > 20s
         }
     }
 
-    # migrate other files after 45s
+    # migrate other files after 30s
     policy default
     {
         condition {
-                last_mod > 60s
+                last_mod > 30s
         }
-        archive_id = 1;
+        hints="archive_id=1";
     }
 
 }
