--- a/tests/lustre_fs/cfg/test_xattr.conf
+++ b/tests/lustre_fs/cfg/test_xattr.conf
@@ -16,8 +16,7 @@ Filesets
                         # xattr foo is set
                         xattr.user.foo != ""
                 }
-                migration_hints="fileclass={fileclass}";
-                archive_id = 1;
+                migration_hints="fileclass={fileclass},archive_id=1";
         }
 
         FileClass xattr_bar
@@ -27,8 +26,7 @@ Filesets
                         # xattr bar is set
                         xattr.user.bar != ""
                 }
-                migration_hints="fileclass={fileclass}";
-                archive_id = 2;
+                migration_hints="fileclass={fileclass},archive_id=2";
         }
 }
 
@@ -55,7 +53,7 @@ migration_policies
         condition {
                 last_mod > 5s
         }
-        archive_id = 3;
+        hints="archive_id=3";
     }
 }
 
