--- a/tests/lustre_fs/cfg/test2.conf
+++ b/tests/lustre_fs/cfg/test2.conf
@@ -16,11 +16,11 @@ migration_policies
         # if they are continuously appended.
         condition
         {
-            last_mod > 30sec
+            last_mod > 10sec
             and
             name == "*[1-5]"
         }
-        archive_id = 1;
+        hints="archive_id=1";
     }
 }
 
