--- a/tests/lustre_fs/cfg/test_trig3.conf
+++ b/tests/lustre_fs/cfg/test_trig3.conf
@@ -15,7 +15,7 @@ migration_policies
         {
             last_mod >= 0
         }
-        archive_id = 1;
+        hints="archive_id=1";
     }
 }
 
