--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -116,6 +116,16 @@ define_policy {
     scope { type == file and status == synchro }
     status_manager = lhsm;
 }
+migration_parameters
+{
+    lru_sort_attr = last_mod;
+    default_action = lhsm.archive;
+}
+purge_parameters
+{
+    lru_sort_attr = last_access;
+    default_action = lhsm.release;
+}
 
 
 migration_policies
