modules: moved Lustre/HSM specific stuff to policies/lhsm.[ch].
This pices of code are intended to be a dynamic policy-specific module.

Change-Id: I767f061fdc125ce3dc22ef9ea176806ef8385037

--- a/src/policies/Makefile.am
+++ b/src/policies/Makefile.am
@@ -5,3 +5,7 @@ noinst_LTLIBRARIES=libpolicies.la
 libpolicies_la_SOURCES=policy_matching.c policy_loader.c policy_triggers.c \
                        policy_run_cfg.c status_manager.c run_policies.h policy_run.c \
                        policy_actions.c 
+
+if LUSTRE_HSM
+libpolicies_la_SOURCES+=lhsm.h lhsm.c
+endif
