cfg parsing: allow specifying block names at top config level. generic policies: moved all old build-in policy aspects to define_policy block.
Changes in config parsing, so defining policies can be done like this:
define_policy policy_name {
...
}

Moved default_action to define_policy block (was in policy_parameters).
and allow specifying a default_lru_sort_attr in define_policy.
Thus, including a "legacy_<old_mode>.conf" that contains 'define_policy' blocks
is enough to get the same behavior as in previous versions
(avoid handling multiple '<policy>_parameters' blocks for a policy).

Change-Id: Iaff96b603ebec777c4f48d09e128b55d26a6a800

--- a/tests/lustre_fs/cfg/OtherParameters_2.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_2.conf
@@ -71,10 +71,12 @@ migration_policies
     }
 }
 
-migration_parameters
-{
-    runtime_interval = 1min;
-    backup_new_files = TRUE;
+migration_trigger {
+    trigger_on = periodic;
+    check_interval = 1min;
+}
+
+migration_parameters {
     max_migration_count = 10;
 }
 
