--- a/tests/lustre_fs/cfg/OtherParameters_3.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_3.conf
@@ -1,16 +1,21 @@
 %include "common.conf"
 
-hsm_remove_policy
+hsm_remove_rules
 {
-    hsm_remove = TRUE;
-    deferred_remove_delay = 30s;
+    rule default {
+        condition { rm_time > 30s }
+    }
+}
+
+hsm_remove_trigger {
+    trigger_on = periodic;
+    check_interval = 1min;
 }
 
 hsm_remove_parameters
 {
-    runtime_interval = 1min;
-    nb_threads_rm = 2;
-    rm_queue_size = 6;
+    nb_threads = 2;
+    queue_size = 6;
     max_rm_count = 4;
 }
 
