--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -75,16 +75,15 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-define_policy {
-    name  = "migration";
+define_policy migration {
     scope { type == file and (status == new or status == modified) }
     status_manager = lhsm;
+    default_lru_sort_attr = last_mod;
+    default_action = lhsm.archive;
 }
 
 migration_parameters
 {
-    lru_sort_attr = last_mod;
-    default_action = lhsm.archive;
     nb_threads = 2;
 
     max_action_count = 100;
@@ -96,15 +95,14 @@ migration_trigger
     check_interval = 1s;
 }
 
-define_policy {
-    name  = "purge";
+define_policy purge {
     scope { type == file and status == synchro }
     status_manager = lhsm;
+    default_lru_sort_attr = last_access;
+    default_action = lhsm.release;
 }
 
 purge_parameters
 {
-    lru_sort_attr = last_access;
-    default_action = lhsm.release;
     nb_threads = 2;
 }
