--- a/tests/lustre_fs/cfg/lru_sort_archive.conf
+++ b/tests/lustre_fs/cfg/lru_sort_archive.conf
@@ -7,8 +7,8 @@ migration_policies
 
 migration_parameters {
 	# serialize processing to make the check easy in test output
-	nb_threads_migration = 1;
-	migration_queue_size = 1;
+	nb_threads = 1;
+	queue_size = 1;
 
 	# set a small result size to check request continuation
 	db_result_size_max = 4;	
