--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -106,27 +106,18 @@ filesets
 
 }
 
-define_policy {
-    name  = "migration";
+define_policy migration {
     scope { type == file and (status == new or status == modified) }
     status_manager = lhsm;
+    default_action = lhsm.archive;
+    default_lru_sort_attr = last_mod;
 }
-define_policy {
-    name  = "purge";
+define_policy purge {
     scope { type == file and status == synchro }
     status_manager = lhsm;
-}
-migration_parameters
-{
-    lru_sort_attr = last_mod;
-    default_action = lhsm.archive;
-}
-purge_parameters
-{
-    lru_sort_attr = last_access;
     default_action = lhsm.release;
+    default_lru_sort_attr = last_access;
 }
-
 
 migration_policies
 {
