--- a/tests/lustre_fs/cfg/PurgeStd_Size.conf
+++ b/tests/lustre_fs/cfg/PurgeStd_Size.conf
@@ -23,11 +23,10 @@ migration_policies
     }
 }
 
-migration_parameters
-{
-    # run every sec
-    runtime_interval = 1s;
-    backup_new_files = TRUE;
+# run migration every sec
+migration_trigger {
+    trigger_on = periodic;
+    check_interval = 1s;
 }
 
 purge_trigger
