--- a/tests/lustre_fs/cfg/test_default_case.conf
+++ b/tests/lustre_fs/cfg/test_default_case.conf
@@ -28,12 +28,12 @@ migration_policies
     # default: no migration
 }
 
-migration_parameters
-{
-    # run every sec
-    runtime_interval = 1s;
-    backup_new_files = TRUE;
+# run migration every sec
+migration_trigger {
+    trigger_on = periodic;
+    check_interval = 1s;
 }
+
 
 ######## basic space release policy ##########
 
